ID user decrement error, likely related to custom material PointerProperty #62643

Closed
opened 2019-03-16 11:56:13 +01:00 by MACHIN3 · 5 comments

System Information
Operating system: Linux-4.13.10-041310-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.67

Blender Version
Broken: version: 2.80 (sub 49), branch: blender2.7, commit date: 2019-03-15 23:51, hash: 3600bb79d0
Worked: -

Short description of error

Changing any material property on the material of the selected object in the attached blend, causes the terminal to print these errors:

ERROR (bke.library): /home/sources/buildbot-x86_64-slave/linux_glibc224_x86_64_cmake/blender.git/source/blender/blenkernel/intern/library.c:242 id_us_min: ID user decrement error: MAplastic.red (from '[Main]'): 0 <= 0

Interestingly, the error occurs only when the material properties panel is open. so it may be related to the preview icon?

The file was saved with a custom defined PointerProperty, which is currently pointing to the material plastic.red.
You can register the property from the text editor in the blend, but it's not even necessary.
If you do register the property, you can set it to None and the error will be gone.

This error used to be a Warning a while ago.
I've been getting it since at least December, when I started using this PointerProperty.

Exact steps for others to reproduce the error

  • open the attached blend
  • change the emission strength in the node editor, watch the terminal
  • switch to the materials workspace or switch away from the material properties and change the value again, nothing will happen
  • the blue material has a PointerProperty at material.DM.matchedmaterialto, pointing to the plastic.red material
  • you can register it by running the script in the text editor, but the error occurs even without it being registered
  • if registered. set it to None and the error will be gone

Video demo
ID_user_decrement_error.blend

**System Information** Operating system: Linux-4.13.10-041310-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.67 **Blender Version** Broken: version: 2.80 (sub 49), branch: blender2.7, commit date: 2019-03-15 23:51, hash: `3600bb79d0` Worked: - **Short description of error** Changing any material property on the material of the selected object in the attached blend, causes the terminal to print these errors: ``` ERROR (bke.library): /home/sources/buildbot-x86_64-slave/linux_glibc224_x86_64_cmake/blender.git/source/blender/blenkernel/intern/library.c:242 id_us_min: ID user decrement error: MAplastic.red (from '[Main]'): 0 <= 0 ``` Interestingly, the error occurs only when the material properties panel is open. so it may be related to the preview icon? The file was saved with a custom defined PointerProperty, which is currently pointing to the material `plastic.red`. You can register the property from the text editor in the blend, but it's not even necessary. If you do register the property, you can set it to None and the error will be gone. This error used to be a Warning a while ago. I've been getting it since at least December, when I started using this PointerProperty. **Exact steps for others to reproduce the error** * open the attached blend * change the emission strength in the node editor, watch the terminal * switch to the materials workspace or switch away from the material properties and change the value again, nothing will happen * the blue material has a PointerProperty at `material.DM.matchedmaterialto`, pointing to the `plastic.red` material * you can register it by running the script in the text editor, but the error occurs even without it being registered * if registered. set it to None and the error will be gone [Video demo ](https://www.youtube.com/watch?v=1eqamzYCVlI) [ID_user_decrement_error.blend](https://archive.blender.org/developer/F6833965/ID_user_decrement_error.blend)
Author

Added subscriber: @MACHIN3

Added subscriber: @MACHIN3

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2019-03-16 22:34:07 +01:00

Confirmed.

Confirmed.

This issue was referenced by 606f3c74d3

This issue was referenced by 606f3c74d36bbbe6b7e3aeae962176a89355a552

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62643
No description provided.